log/build_2026-03-19_20-34-20/object_detection/stdout_stderr.log
running egg_info
writing ../../build/object_detection/object_detection.egg-info/PKG-INFO
writing dependency_links to ../../build/object_detection/object_detection.egg-info/dependency_links.txt
writing entry points to ../../build/object_detection/object_detection.egg-info/entry_points.txt
writing requirements to ../../build/object_detection/object_detection.egg-info/requires.txt
writing top-level names to ../../build/object_detection/object_detection.egg-info/top_level.txt
reading manifest file '../../build/object_detection/object_detection.egg-info/SOURCES.txt'
adding license file 'LICENSE'
writing manifest file '../../build/object_detection/object_detection.egg-info/SOURCES.txt'
running build
running build_py
copying object_detection/object_detection.py -> /home/david-wang/Desktop/Projects/Wisconsin Robotics/WRoverSoftware_25-26/build/object_detection/build/lib/object_detection
copying object_detection/__init__.py -> /home/david-wang/Desktop/Projects/Wisconsin Robotics/WRoverSoftware_25-26/build/object_detection/build/lib/object_detection
copying object_detection/bottle_mover.py -> /home/david-wang/Desktop/Projects/Wisconsin Robotics/WRoverSoftware_25-26/build/object_detection/build/lib/object_detection
running install
running install_lib
copying /home/david-wang/Desktop/Projects/Wisconsin Robotics/WRoverSoftware_25-26/build/object_detection/build/lib/object_detection/object_detection.py -> /home/david-wang/Desktop/Projects/Wisconsin Robotics/WRoverSoftware_25-26/install/object_detection/lib/python3.12/site-packages/object_detection
byte-compiling /home/david-wang/Desktop/Projects/Wisconsin Robotics/WRoverSoftware_25-26/install/object_detection/lib/python3.12/site-packages/object_detection/object_detection.py to object_detection.cpython-312.pyc
  File "/home/david-wang/Desktop/Projects/Wisconsin Robotics/WRoverSoftware_25-26/install/object_detection/lib/python3.12/site-packages/object_detection/object_detection.py", line 100
    else if self.get_parameter('model').value == "hammer":
         ^^
SyntaxError: expected ':'

running install_data
copying resource/object_detection -> /home/david-wang/Desktop/Projects/Wisconsin Robotics/WRoverSoftware_25-26/install/object_detection/share/ament_index/resource_index/packages
copying package.xml -> /home/david-wang/Desktop/Projects/Wisconsin Robotics/WRoverSoftware_25-26/install/object_detection/share/object_detection
copying resource/mallet.blob -> /home/david-wang/Desktop/Projects/Wisconsin Robotics/WRoverSoftware_25-26/install/object_detection/share/object_detection/resource
copying resource/hammer.blob -> /home/david-wang/Desktop/Projects/Wisconsin Robotics/WRoverSoftware_25-26/install/object_detection/share/object_detection/resource
copying resource/bottle.blob -> /home/david-wang/Desktop/Projects/Wisconsin Robotics/WRoverSoftware_25-26/install/object_detection/share/object_detection/resource
running install_egg_info
removing '/home/david-wang/Desktop/Projects/Wisconsin Robotics/WRoverSoftware_25-26/install/object_detection/lib/python3.12/site-packages/object_detection-0.0.0-py3.12.egg-info' (and everything under it)
Copying ../../build/object_detection/object_detection.egg-info to /home/david-wang/Desktop/Projects/Wisconsin Robotics/WRoverSoftware_25-26/install/object_detection/lib/python3.12/site-packages/object_detection-0.0.0-py3.12.egg-info
running install_scripts
Installing object_detection script to /home/david-wang/Desktop/Projects/Wisconsin Robotics/WRoverSoftware_25-26/install/object_detection/lib/object_detection
writing list of installed files to '/home/david-wang/Desktop/Projects/Wisconsin Robotics/WRoverSoftware_25-26/build/object_detection/install.log'
